# peat-node

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  QUICKSTART.md  README.md  SKILL.md  build.rs  zarf.yaml
.cargo/: config.toml
.claude/: settings.json
.githooks/: pre-commit
.github/workflows/: attachment-delivery.yml  ci.yaml  cross-cluster-sync.yml  nats-bridge-e2e.yml  qa-review.yml  quickstart.yml  release.yml
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/02-bridge-envelope-and-local-nats-ingress/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-04-SUMMARY.md
.planning/phases/05-end-to-end-validation-and-edge-deployment/: 05-01-SUMMARY.md  05-02-SUMMARY.md
bundle/: uds-bundle.yaml
chart/peat-node/: Chart.yaml  values.yaml
chart/peat-node/templates/: _helpers.tpl  deployment.yaml  role.yaml  rolebinding.yaml  service-headless.yaml  service.yaml  serviceaccount.yaml  uds-package.yaml
chart/peat-sidecar/: Chart.yaml  values.yaml
chart/peat-sidecar/templates/: _helpers.tpl  deployment.yaml  service.yaml  uds-package.yaml
crates/peat-cli/: Cargo.toml  QUICKSTART.md  README.md
crates/peat-cli/src/: creds.rs  join.rs  lib.rs  main.rs
crates/peat-cli/src/cli/: attach.rs  create.rs  delete.rs  mod.rs  observe.rs  output.rs  query.rs  schema.rs  update.rs  writes.rs
crates/peat-cli/tests/: cli_parser.rs
crates/peat-cli/tests/e2e/: main.rs  scenarios.rs  topology.rs
docs/: CONFIGURATION.md  DESIGN.md  NATS_BRIDGE_EDGE_SMOKE.md  PACKAGE_INSTALLATION.md  package-repository-index.html  peat-node-adr-001-peat-cli.md  peat-node-adr-002-formation-coordination-surface.md
examples/compose/: README.md  bootstrap.sh  demo.sh  docker-compose.dev.yml  docker-compose.yml
examples/compose/attachments/: README.md  docker-compose.multi-host.yml  docker-compose.two-node.yml  docker-compose.yml  peer.sh  send.sh
examples/compose/attachments/inbox-b/: .gitignore
examples/compose/attachments/node-a/: docker-compose.yml
examples/compose/attachments/node-b/: docker-compose.yml
examples/compose/attachments/outbox/: .gitignore
examples/compose/attachments/outbox-a/: .gitignore  hello.txt
examples/compose/nats-bridge/: README.md  docker-compose.local.yml  docker-compose.yml  publish-vision.sh  verify-vision.sh  vision-summary.json
issues/: crdt-sync-document-content-empty.md  peat-node-peering-failure.md
packaging/: peat-node.env  peat-node.service
packaging/debian/: postinst
packaging/rpm/: postinstall.sh  postuninstall.sh  preuninstall.sh
proto/: sidecar.proto
sdk/go/: README.md  client.go  client_test.go  go.mod  heartbeat.go
sdk/go/example/agent-integration/: main.go
sdk/go/proto/peat/sidecar/v1/: sidecar.proto
src/: cli_validation.rs  crypto.rs  deployer.rs  fanout.rs  identity.rs  lib.rs  main.rs  node.rs  query.rs  service.rs  types.rs  watcher.rs
src/attachments/: config.rs  handlers.rs  inbox.rs  ingest.rs  mod.rs  outbox.rs  registry.rs  runtime.rs  validate.rs
src/nats_bridge/: config.rs  egress.rs  envelope.rs  ingress.rs  ledger.rs  mod.rs  operations.rs  readiness.rs  reconcile.rs  runtime.rs
test/: attachment-delivery-compose.sh  attachment-outbox-watch-compose.sh  cross-cluster-sync.sh  nats-bridge-e2e.sh  quickstart-compose.sh
test/go/: .gitignore  Makefile  README.md  client.go  go.mod
test/go/cluster/: README.md  cluster_sync_test.go  setup.sh
test/go/cmd/functest/: main.go
test/go/cmd/query/: main.go
test/go/cmd/smoketest/: main.go
test/go/cmd/synctest/: main.go
test/go/cmd/watchertest/: main.go
test/go/proto/peat/sidecar/v1/: sidecar.proto
tests/: args_test.rs  attachments_acceptance_test.rs  attachments_deferred_test.rs  attachments_e2e_test.rs  attachments_multi_peer_test.rs  attachments_restart_regression_test.rs  attachments_smoke_test.rs  attachments_subscribe_test.rs  auto_reconnect_test.rs  blob_test.rs  collection_config_test.rs  cross_peer_encryption_test.rs  deployer_test.rs  formation_isolation_test.rs  grpc_test.rs  mdns_test.rs  nats_bridge_egress_test.rs  nats_bridge_ingress_test.rs  nats_bridge_memory_test.rs  nats_bridge_startup_test.rs  node_test.rs  partition_test.rs  sender_rpc_test.rs  server_connection_limits_test.rs  service_reset_test.rs  subscribe_query_test.rs  subscribe_test.rs  sync_control_test.rs  sync_subprocess_test.rs  sync_test.rs  typed_collections_test.rs  types_test.rs  uds_test.rs  watcher_sync_test.rs
