[package]
name = "peat-node"
version = "0.1.0"
edition = "2021"
authors = ["Kit Plummer <kitplummer@defenseunicorns.com>"]
license = "Apache-2.0"
repository = "https://github.com/defenseunicorns/peat-node"
description = "Peat mesh node — exposes peat-protocol as a gRPC API for co-located applications"

[[bin]]
name = "peat-node"
path = "src/main.rs"

[dependencies]
# Mesh networking (Automerge CRDT sync + Iroh blob transfer)
peat-mesh = { version = "=0.9.0-rc.7", features = ["automerge-backend"] }

# P2P networking
iroh = "0.97"

# Connect RPC (Connect + gRPC + gRPC-Web on single port)
connectrpc = { version = "0.2", features = ["server"] }
buffa = "0.2"
tokio-stream = "0.1"

# HTTP framework
axum = "0.8"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http2"] }
http-body = "1"
tower = "0.5"
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# Encryption at rest
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for agent watcher — Connect RPC JSON encoding)
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

[build-dependencies]
connectrpc-build = "0.2"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["full", "test-util"] }
