[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "peat-node"
version = "0.3.9"
edition = "2021"
authors = ["Kit Plummer <kitplummer@defenseunicorns.com>"]
license = "Apache-2.0"
repository = "https://github.com/defenseunicorns/peat-node"
description = "Peat mesh node — exposes peat-protocol as a gRPC API for co-located applications"

[[bin]]
name = "peat-node"
path = "src/main.rs"

[dependencies]
# Mesh networking (Automerge CRDT sync + Iroh blob transfer).
#
# rc.31 (peat-mesh#208/#209/#210, ADR-066 Phase 3): internal
#   `HierarchyLevel` rename (Squad/Platoon/Company → Cell/Cohort/
#   Federation) + new Coalition tier, QoS collection names aligned to
#   the hyphenated peat-schema convention, and a coordinated dependency
#   refresh: `automerge` 0.7→0.9 and the iroh rc-train rc.0→rc.1
#   (iroh-blobs, iroh-mdns-address-lookup). The HierarchyLevel rename is
#   internal to peat-mesh and not part of peat-node's consumed surface;
#   the iroh/automerge bumps are why peat-node's own `iroh`/`automerge`
#   pins move in lockstep below. Pairs with peat-schema/peat-protocol
#   rc.22 (ADR-066 Phases 1+2: `platoon_id`→`cohort_id`, CommandScope
#   CELL/COHORT/FEDERATION/COALITION), adopted together in one release.
#
# rc.30 (peat-mesh#205/#206): accept-side push of existing docs +
#   `connect_and_authenticate_with_addr(EndpointAddr)` bypass for the
#   `AddressLookupServices` chain. Two bugs in one release:
#   1. Connect-side: dial-with-known-address went through chain
#      discovery (DnsAddressLookup ahead of MemoryLookup), so
#      airgapped consumers timed out waiting on DNS. The new
#      `connect_and_authenticate_with_addr` entry point takes a
#      fully-populated `EndpointAddr` and skips the chain entirely.
#   2. Accept-side: `SyncProtocolHandler::accept` registered the
#      inbound connection but never proactively pushed its own docs.
#      Worked fine for sidecar-pair bootstrap (the dialer happens to
#      have docs too); broke the moment an ephemeral-empty-store peer
#      (peat-cli) dialed an established sidecar. Now symmetric with
#      the dial side — both sides push their local docs on connect.
#   Unblocks peat-cli's full read/write/observe walkthroughs in
#   `QUICKSTART.md` (Path A compose + Path B Helm/k3d).
#
# rc.29 (peat-mesh#202): `AutomergeStore::delete` now fires
#   `observer_tx`, satisfying the CDC contract documented on
#   `subscribe_to_observer_changes` ("fires for ALL document changes").
#   This makes `peat observe` see remote tombstone arrivals — the
#   `apply_tombstone` receive path lands on `store.delete`, which now
#   wakes the observer. ADR-001 Open Question §7 resolved.
#
# rc.28 (peat-mesh#187/#192/#195/#196): peat-cli unblocker —
#   `AutomergeStore::diff` / `apply_delta` + `AutomergeDelta` (closes
#   peat-mesh#187, unblocks ADR-001 `peat update --from`);
#   `AutomergeBackend::{next_lamport, current_lamport, observe_lamport}`
#   node-local Lamport clock + persistence + receive-side wire-up
#   (closes peat-mesh#192/#195/#196, replaces peat-cli's wall-clock
#   Lamport workaround in `peat delete`). Pure additions; rc.27 surface
#   is unchanged.
#
# rc.27 (peat-mesh#188/#189/#190): peat-mesh#175 follow-throughs.
# - peat-mesh#189: `AutomergeBackend::get` keyed-lookup override (closes
#   peat-mesh#186). Trait-default `get` was O(N) via scan_prefix; now
#   O(1) via the same `key_for(collection, id)` shape the upsert path
#   uses. Pure perf improvement; deletion semantics match the trait-
#   default exactly.
# - peat-mesh#190: `InMemoryBackend::get` analog. Same O(N)→O(1) shape.
# - peat-mesh#188: UAT file-header doc-comment scope clarification. No
#   code change.
# No API surface change vs rc.26 — the overrides preserve all existing
# contracts (return types, deletion-filter semantics, observer paths);
# any caller using `DocumentStore::get` transparently gets the faster
# path. peat-node's call sites are unchanged.
#
# rc.26 (peat-mesh#184): adds the in-CI behavioural UAT for peat-mesh#175
# delivery-ratio thresholds under constrained-bandwidth shaping —
# pairs with rc.25's architectural pin (peat-mesh#180) for code-shape +
# measurement coverage of the persistent multiplexed sync stream
# wire-up. Test-only addition; no production API surface change vs
# rc.25.
#
# rc.25 (peat-mesh#176/#178/#180, ADR-063): persistent multiplexed sync
# streams. `AutomergeBackend` now owns a strong `Arc<SyncChannelManager>`
# so the coordinator's `Weak` no longer dangles at construction-scope
# exit; per-peer writer-task + bounded mpsc replaces the per-message
# stream-open + per-peer mutex serialisation. Closes peat-mesh#175
# (architectural half). API surface unchanged; the persistent path is
# entirely internal to peat-mesh.
#
# rc.24 shipped the ADR-062 Phase 2 follow-up trail:
# - rc.21 (peat-mesh#162): `peat_mesh::transport::iroh_mesh::IrohMeshTransport`
#   relocation from peat-protocol; `peat_mesh::network::EndpointId` re-export.
# - rc.22 (peat-mesh#166): `Connection` + `DiscoveryEvent` re-exports
#   the rc.21 surface accidentally missed.
# - rc.23 (peat-mesh#171): `parse_close_reason` structured-variant
#   refactor — exhaustive match on `ConnectionError`, no behavior change.
# - rc.24 (peat-mesh#173): narrow `QuicMeshConnection` trait + removed
#   `pub use Connection`. peat-protocol's formation_handshake uses the
#   trait; peat-node's `peat_mesh::storage::*` / `peat_mesh::sync::*`
#   surface is untouched by the narrowing.
peat-mesh = { version = "=0.9.0-rc.36", features = ["automerge-backend"] }

# File distribution substrate (PRD-006). FileDistribution trait + IrohFileDistribution.
# rc.17 picks up peat-mesh rc.25 (persistent multiplexed sync streams,
# peat#935 / ADR-063). rc.16 picked up peat-mesh rc.24 (formation_handshake
# → &dyn QuicMeshConnection, peat#932); rc.15 was the ADR-062 Phase 2
# consumer-side IrohMeshTransport deletion + direct-iroh-dep drop (peat#926).
peat-protocol = { version = ">=0.9.0-rc.24, <0.9.1", features = ["automerge-backend"] }

# P2P networking — pinned to match peat-mesh's exact iroh pin
# (peat#923 / peat#924). peat-mesh and peat-node MUST share an iroh
# version; mixed versions in the same process cause undefined behavior
# in iroh's process-global crypto provider + ALPN registry.
iroh = "=1.0.0-rc.1"

# Connect RPC (Connect + gRPC + gRPC-Web on single port)
connectrpc = { version = "0.2", features = ["server"] }
buffa = "0.2"
tokio-stream = "0.1"

# HTTP framework
axum = "0.8"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http2"] }
http-body = "1"
tower = "0.5"
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"

# Hashing (PRD-006 attachment ingest streams sha256 alongside blob ingest;
# also exercised by validate.rs unit tests for hash equality).
sha2 = "0.10"

# O_NOFOLLOW for the attachment-ingest open path (PRD-006 §Validation Rule 5
# TOCTOU mitigation). libc is already transitively pulled by iroh / tokio —
# making it a direct dep just gives us the constant without surprise.
libc = "0.2"

# Encryption at rest
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for agent watcher — Connect RPC JSON encoding)
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

[build-dependencies]
connectrpc-build = "0.2"

[dev-dependencies]
tempfile = "3.10"
tokio = { version = "1", features = ["full", "test-util"] }
rcgen = "0.13"
# Serial execution for iroh two-node integration tests — each test spins
# up its own `#[tokio::test(flavor = "multi_thread")]` runtime plus two
# real iroh endpoints, and running them in parallel within a single
# binary causes CPU contention that can stall PRD-006 test 23's
# 60-second budget. `#[serial_test::serial(iroh_two_node)]` on the
# relevant tests pins them to one-at-a-time execution within their
# binary; cargo test already runs binaries sequentially.
serial_test = "3"
