[package]
name = "peat-cli"
version = "0.1.0"
edition = "2021"
authors = ["Kit Plummer <kitplummer@defenseunicorns.com>"]
license = "Apache-2.0"
repository = "https://github.com/defenseunicorns/peat-node"
description = "peat — operator CLI as a Peat node (peat-node ADR-001)"

[[bin]]
name = "peat"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

# Mesh runtime — pinned to the same versions peat-node consumes so the
# workspace can't end up with two peat-mesh / iroh versions in one process
# (iroh has process-global crypto + ALPN registries that explode under
# version skew, see peat#923/#924).
peat-mesh = { version = "=0.9.0-rc.26", features = ["automerge-backend"] }
peat-protocol = { version = ">=0.9.0-rc.17, <0.9.1", features = ["automerge-backend"] }
iroh = "=1.0.0-rc.0"
# Pinned to match peat-mesh's `automerge` dep so the `Automerge` type peat-cli
# names (from store.get / scan_prefix) is ABI-compatible with what the backend
# hands us.
automerge = "0.7.1"
serde_json = "1"
# SIGPIPE handling for `observe` (ADR-001 §"Shell integration discipline":
# pipe-close should exit silently, not crash). Default disposition kills
# the process; we ignore the signal at startup so writes surface BrokenPipe
# we can map to a clean exit.
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
