[package]
name = "peat-cli"
version = "0.3.8"
edition = "2021"
authors = ["Kit Plummer <kitplummer@defenseunicorns.com>"]
license = "Apache-2.0"
repository = "https://github.com/defenseunicorns/peat-node"
description = "peat — operator CLI as a Peat node (peat-node ADR-001)"

[[bin]]
name = "peat"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
dirs = "5"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"

# Mesh runtime — pinned to the same versions peat-node consumes so the
# workspace can't end up with two peat-mesh / iroh versions in one process
# (iroh has process-global crypto + ALPN registries that explode under
# version skew, see peat#923/#924).
peat-mesh = { version = "=0.9.0-rc.32", features = ["automerge-backend"] }
peat-protocol = { version = ">=0.9.0-rc.22, <0.9.1", features = ["automerge-backend"] }
# peat-schema runtime type registry. Floor bumped to rc.22 — the ADR-066
# hierarchy rename (peat#957) renames `platoon_id`→`cohort_id` on
# `CellState` and the `CommandScope` enum variants; below rc.22 the typed
# round-trip tests round-trip the old field name. The floor still pins
# `TypeDescriptor::proto3_zero()` (rc.21, peat#953/#954), which
# `apply_proto3_defaults` in `cli/writes.rs` consumes as its defaults source.
peat-schema = { version = ">=0.9.0-rc.22, <0.9.1" }
iroh = "=1.0.0-rc.1"
# Pinned to match peat-mesh's `automerge` dep so the `Automerge` type peat-cli
# names (from store.get / scan_prefix) is ABI-compatible with what the backend
# hands us. peat-mesh rc.31 moved to automerge 0.9.
automerge = "0.9.0"
serde_json = "1"
# SIGPIPE handling for `observe` (ADR-001 §"Shell integration discipline":
# pipe-close should exit silently, not crash). Default disposition kills
# the process; we ignore the signal at startup so writes surface BrokenPipe
# we can map to a clean exit.
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
# E2E topology helper builds creds with a base64-encoded test formation key.
base64 = "0.22"
# Multi-node e2e scenarios each spin up their own Iroh endpoint plus
# spawn a peat subprocess. Running them in parallel saturates the system
# crypto provider and triggers handshake races. Mirrors peat-node's own
# tests/sync_test.rs pattern (`#[serial(iroh_two_node)]`).
serial_test = "3"
# Unique per-run formation id in the mDNS e2e test so concurrent runs on
# the shared self-hosted runner can't discover each other over loopback.
uuid = { version = "1", features = ["v4"] }
